--- a/Views/shop/cart.ejs
+++ b/Views/shop/cart.ejs
@@ -1,19 +1,25 @@
 <%- include("../partials/header.ejs") %>
 <main>
-    <% if(products){ %>
+    <% console.log(products); %>
+    <% if(products!=[]){ %>
         <% products.forEach((prod)=>{ %>
-        <h1><%= prod.title%>(<%=prod.cartItem.quantity%>)</h1>
+            
+        <h1><%= prod.productId.title%>(<%=prod.quantity%>)</h1>
         <form action="/deletFromCart" method="post">
-            <input type="hidden" name="id" value="<%= prod.id%>">
-            <input type="hidden" name="price" value="<%= prod.price%>">
+            <input type="hidden" name="id" value="<%= prod.productId._id%>">
+            <input type="hidden" name="price" value="<%= prod.productId.price%>">
             <button type="submit" class="btn">delete</button>
+            <input type="hidden" name="_csrf" value=<%= csrfToken %>>
         </form>
-        <%  }) %>
+        <%  }); %>
         <form action="/post-order" method="post">
-        <button type="submit" class="btn" style="margin-top: 20px;">CheckOut</button>
+            <% if(products[0] != undefined ){ %>
+            <button type="submit" class="btn" style="margin-top: 20px;">CheckOut</button>
+                <input type="hidden" name="_csrf" value=<%= csrfToken %>>
+                <% } %>
         </form>
-     <% }else{ %>
-    <h1>No products in cart</h1>
+     <% } if(products[0]==undefined){ %>
+            <h1>No products in cart</h1>
      <% } %>
 </main>
 
