--- a/Views/shop/orders.ejs
+++ b/Views/shop/orders.ejs
@@ -1,18 +1,23 @@
 <%- include("../partials/header.ejs") %>
 <main>
-    <h1>orders</h1>
+
+    <% if(orders[0]!=undefined){ %>
+    <h1>orders</h1>  
+    <% }else{ %>
+        <h1>no orders yet</h1>
+        <% } %>  
     <ul>
         <% orders.forEach(order=>{ %>
             
-
-            <h2>#<%= order.id %></h2>
+    <% let totalPrice=0 %>
             <%order.products.forEach(prod=>{ %>
-                <li>title: <%= prod.title %></li>
-                <li>price: <%= prod.price %></li>
-                <li>quantity<%=prod.orderItem.quantity %></li>
-                <hr>
-        
+                <li>title: <%= prod.product.title %></li>
+                <% totalPrice+= parseInt(prod.product.price) %>
+                <li>price: <%= prod.product.price %></li>
+                <li>quantity:<%=prod.quantity %></li>
            <% }) %>
+                    <h2>ToTALprice= <%= totalPrice %></h2>
+                    <hr>
             <% }) %>
     </ul>
 
